_Source/force-app/main/default/objects/BI_Divisional_Plan__c/BI_Divisional_Plan__c.object-meta.xml
<CustomObject>
    <label>Divisional Plan</label>
    <nameField>
        <label>Divisional Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Divisional Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>