_Source/force-app/main/default/objects/BI_Divisional_Plan__c/fields/BI_Division__c.field-meta.xml
<CustomField>
    <fullName>BI_Division__c</fullName>
    <formula>TEXT(  Owner:User.BI_Objective_Division__c  )</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>