_Source/force-app/main/default/objects/BI_Divisional_Plan__c/fields/BI_Mission_Statement__c.field-meta.xml
<CustomField>
    <fullName>BI_Mission_Statement__c</fullName>
    <label>Mission Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>