_Source/force-app/main/default/objects/BI_Divisional_Plan__c/fields/BI_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>BI_Opportunities__c</fullName>
    <label>Opportunities</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>