_Source/force-app/main/default/objects/BI_Divisional_Plan__c/fields/BI_Organizational_Plan__c.field-meta.xml
<CustomField>
    <fullName>BI_Organizational_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organizational Plan</label>
    <referenceTo>BI_Organizational_Plan__c</referenceTo>
    <relationshipLabel>Divisional Plans</relationshipLabel>
    <relationshipName>Divisional_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>