_Source/force-app/main/default/objects/BI_Divisional_Plan__c/fields/BI_Overarching_Focus_Strategy__c.field-meta.xml
<CustomField>
    <fullName>BI_Overarching_Focus_Strategy__c</fullName>
    <description>What should be the division&apos;s focus for the year</description>
    <label>Division Strategy &amp; Action Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>