_Source/force-app/main/default/objects/BI_Divisional_Plan__c/fields/BI_Plan_Owner_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>BI_Plan_Owner_Employee_Id__c</fullName>
    <formula>Owner:User.Employee_ID__c</formula>
    <label>Plan Owner Employee Id</label>
    <type>Text</type>
</CustomField>