_Source/force-app/main/default/objects/BI_Divisional_Plan__c/fields/BI_Related_Divisional_Plan__c.field-meta.xml
<CustomField>
    <fullName>BI_Related_Divisional_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Divisional Plan</label>
    <referenceTo>BI_Divisional_Plan__c</referenceTo>
    <relationshipLabel>Related Divisional Plans</relationshipLabel>
    <relationshipName>Related_Divisional_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>