_Source/force-app/main/default/objects/BI_Divisional_Plan__c/fields/BI_Strengths__c.field-meta.xml
<CustomField>
    <fullName>BI_Strengths__c</fullName>
    <label>Strengths</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>