_Source/force-app/main/default/objects/BI_Divisional_Plan__c/fields/BI_Threats__c.field-meta.xml
<CustomField>
    <fullName>BI_Threats__c</fullName>
    <label>Threats</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>