_Source/force-app/main/default/objects/BI_Divisional_Plan__c/fields/BI_Weaknessess__c.field-meta.xml
<CustomField>
    <fullName>BI_Weaknessess__c</fullName>
    <label>Weaknesses</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>