_Source/force-app/main/default/objects/BI_Divisional_Plan__c/fields/Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization__c</fullName>
    <formula>Owner:User.User_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Organization</label>
    <type>Text</type>
</CustomField>