_Source/force-app/main/default/objects/BI_Divisional_Plan__c/listViews/All_Divisional_Plans.listView-meta.xml
<ListView>
    <fullName>All_Divisional_Plans</fullName>
    <columns>BI_Divisional_Plan_Year__c</columns>
    <columns>NAME</columns>
    <columns>BI_Division__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>BI_Organizational_Plan__c</columns>
    <columns>Sales_Organization__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Divisional Plans</label>
</ListView>