_Source/force-app/main/default/objects/BI_Divisional_Plan__c/listViews/All_Divisional_Plans_Current.listView-meta.xml
<ListView>
    <fullName>All_Divisional_Plans_Current</fullName>
    <columns>BI_Divisional_Plan_Year__c</columns>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>BI_Division__c</columns>
    <columns>BI_Organizational_Plan__c</columns>
    <columns>Sales_Organization__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BI_Divisional_Plan_Year__c</field>
        <operation>equals</operation>
        <value>2019,2020</value>
    </filters>
    <label>All Divisional Plans - Current</label>
</ListView>