_Source/force-app/main/default/objects/BI_Divisional_Plan__c/listViews/My_Divisional_Plans_All.listView-meta.xml
<ListView>
    <fullName>My_Divisional_Plans_All</fullName>
    <columns>BI_Divisional_Plan_Year__c</columns>
    <columns>NAME</columns>
    <columns>BI_Mission_Statement__c</columns>
    <columns>BI_Overarching_Focus_Strategy__c</columns>
    <columns>BI_Division__c</columns>
    <columns>BI_Organizational_Plan__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Divisional Plans - All</label>
</ListView>