_Source/force-app/main/default/objects/BI_Divisional_Plan__c/listViews/My_Divisional_Plans_Current.listView-meta.xml
<ListView>
    <fullName>My_Divisional_Plans_Current</fullName>
    <columns>BI_Divisional_Plan_Year__c</columns>
    <columns>NAME</columns>
    <columns>BI_Mission_Statement__c</columns>
    <columns>BI_Overarching_Focus_Strategy__c</columns>
    <columns>BI_Division__c</columns>
    <columns>BI_Organizational_Plan__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>BI_Divisional_Plan_Year__c</field>
        <operation>equals</operation>
        <value>2019,2020</value>
    </filters>
    <label>My Divisional Plans - Current</label>
</ListView>